Two projects added

--- a/index.html
+++ b/index.html
@@ -79,10 +79,55 @@
 
             <!----------- CARD #1 STARTS ---------->
             <div class="card" style="width: 18rem;">
+                <img class="card-img-top" id="angular-vs-react-vs-vue-img" src="assets/img/angular-vs-react-vs-vue.png" alt="Card image cap"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Angular vs. React vs. Vue</h5>
+                        <p class="card-text">Side-by-side comparison of the same website, built using three different frameworks. Prototyped with Adobe XD and supported by Bulma documentation. Post-mortem analysis performed.</p>
+                            <h4>
+                                <code>Angular</code>, 
+                                <code>React</code>, 
+                                <code>Vue</code>, 
+                                <code>Bulma</code>, 
+                                <code>SCSS</code>, 
+                                <code>Font Awesome</code>, 
+                                <code>Adobe XD</code>
+                            </h4>
+                        </p>
+                        <link rel="prefetch"><a href="https://jonrhymes.github.io/angular-vs-react-vs-vue/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
+                    </div>
+            </div>
+            <!----------- CARD #1 ENDS ---------->
+
+            <!----------- CARD #2 STARTS ---------->
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" id="php-restaurant-img" src="assets/img/php-restaurant.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Franklin's Fine Dining</h5>
+                        <p class="card-text">Dynamically coded PHP website with global header and footer, team member and menu API arrays and contact form validation.</p>
+                            <h4>
+                                <code>PHP</code>, 
+                                <code>HTML</code>, 
+                                <code>CSS</code>, 
+                                <code>JavaScript</code>
+                            </h4>
+                        </p>
+                        <link rel="prefetch"><a href="https://php-restaurant.herokuapp.com/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
+                        <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
+                    </div>
+            </div>
+            <!----------- CARD #2 ENDS ---------->
+        </div>
+        <!----------- ROW #1 ENDS ---------->
+
+        <!----------- ROW #2 STARTS ---------->
+        <div class="card-deck" id="top-row">
+
+            <!----------- CARD #3 STARTS ---------->
+            <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="duo-img" src="assets/img/Q-SPADES.png" alt="Card image cap"/>
                     <div class="card-body">
                         <h5 class="card-title">DUO</h5>
-                        <p class="card-text">A comparative card game, like Blackjack or War, played against the computer and that features some of my favorite musicians!</p>
+                        <p class="card-text">A comparative card game, like Blackjack or War, played against the computer and that features some of my favorite musicians! Every card was photoshopped.</p>
                             <h4>
                                 <code>HTML5</code>, 
                                 <code>CSS3</code>, 
@@ -97,9 +142,9 @@
                         <link rel="prefetch"><a href="https://jonrhymes.github.io/new-game/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
-            <!----------- CARD #1 ENDS ---------->
+            <!----------- CARD #3 ENDS ---------->
 
-            <!----------- CARD #2 STARTS ---------->
+            <!----------- CARD #4 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="springs.ly-img" src="assets/img/Wireframe_Desktop-Page2.png" alt="Card image cap">
                     <div class="card-body">
@@ -121,14 +166,14 @@
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
-            <!----------- CARD #2 ENDS ---------->
+            <!----------- CARD #4 ENDS ---------->
         </div>
-        <!----------- ROW #1 ENDS ---------->
+        <!----------- ROW #2 ENDS ---------->        
 
-        <!----------- ROW #2 STARTS ---------->
+        <!----------- ROW #3 STARTS ---------->
         <div class="card-deck" id="top-row">
 
-            <!----------- CARD #3 STARTS ---------->
+            <!----------- CARD #5 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="ship-img" src="assets/img/box-img.png" alt="Card image cap">
                     <div class="card-body">
@@ -145,9 +190,9 @@
                         <link rel="prefetch"><a href="https://shipperific.netlify.app" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
-            <!----------- CARD #3 ENDS ---------->
+            <!----------- CARD #5 ENDS ---------->
 
-            <!----------- CARD #4 STARTS ---------->
+            <!----------- CARD #6 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="bill-img" src="assets/img/Bill.png" alt="Card image cap">
                     <div class="card-body">
@@ -165,14 +210,14 @@
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
-            <!----------- CARD #4 ENDS ---------->
+            <!----------- CARD #6 ENDS ---------->
         </div>
-        <!----------- ROW #2 ENDS ---------->
+        <!----------- ROW #3 ENDS ---------->
 
-        <!----------- ROW #3 STARTS ---------->
+        <!----------- ROW #4 STARTS ---------->
         <div class="card-deck" id="top-row">
 
-            <!----------- CARD #5 STARTS ---------->
+            <!----------- CARD #7 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="jeopardy-img" src="assets/img/jeopardy.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -189,9 +234,9 @@
                         <link rel="prefetch"><a href="https://jeopardy-six.vercel.app" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
-            <!----------- CARD #5 ENDS ---------->
+            <!----------- CARD #7 ENDS ---------->
 
-            <!----------- CARD #6 STARTS ---------->
+            <!----------- CARD #8 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="bookmarkd-img" src="assets/img/bookmarkd.png" alt="Card image cap">
                     <div class="card-body">
@@ -210,14 +255,14 @@
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
-            <!----------- CARD #6 ENDS ---------->
+            <!----------- CARD #8 ENDS ---------->
         </div>
-        <!----------- ROW #3 ENDS ---------->
+        <!----------- ROW #4 ENDS ---------->
 
-        <!----------- ROW #4 STARTS ---------->
+        <!----------- ROW #5 STARTS ---------->
         <div class="card-deck" id="top-row">
 
-            <!----------- CARD #7 STARTS ---------->
+            <!----------- CARD #9 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="buttongrid-img" src="assets/img/buttongrid.png" alt="Card image cap">
                     <div class="card-body">
@@ -232,9 +277,9 @@
                         <link rel="prefetch"><a href="https://jonrhymes.github.io/buttongrid/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
-            <!----------- CARD #7 ENDS ---------->
+            <!----------- CARD #9 ENDS ---------->
 
-            <!----------- CARD #8 STARTS ---------->
+            <!----------- CARD #10 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="buttongrid-img" src="assets/img/basic-calculator.png" alt="Card image cap">
                     <div class="card-body">
@@ -249,9 +294,9 @@
                         <link rel="prefetch"><a href="https://jonrhymes.github.io/basic_calculator/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
-            <!----------- CARD #8 ENDS ---------->
+            <!----------- CARD #10 ENDS ---------->
         </div>
-        <!----------- ROW #4 ENDS ---------->
+        <!----------- ROW #5 ENDS ---------->
 
         <!----------- FOOTER STARTS ---------->
         <section id="footer">
